# meme-template-generator

./: .gitignore  README.md  app.py  build_release.ps1  build_release.sh  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  run_tauri.sh  vite.config.ts
.github/workflows/: build-release.yml
e2e/: full-flow.spec.ts
src/: App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: EmptyState.tsx  MemeCanvas.tsx  SlotPanel.tsx  Toolbar.tsx
src/hooks/: useCanvas.test.ts  useCanvas.ts
src/lib/: export.test.ts  export.ts  tauri.ts
src/store/: index.ts  store.test.ts
src/types/: index.ts
tests/: test_app_e2e.py  test_render.py
