[package]
name = "meme-generator"
version = "1.0.0"
description = "Meme Generator - WC2026 meme template tool"
authors = ["you"]
edition = "2021"

[lib]
name = "meme_generator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
image = "0.25"

